--- a/about.html
+++ b/about.html
@@ -149,78 +149,72 @@
 
                         <div class="flip-card-wrapper ">
                             <div class="img-wrapper">
-                                <img src="https://api.adorable.io/avatars/283/1"
-                                    alt="about Duy">
+                                <img src="https://api.adorable.io/avatars/283/1" alt="about Duy">
                                 <h2>Duy Pham</h2>
                                 <ul>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i
-                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href=""><i
-                                                class="fab fa-youtube"></i></a></li>
+                                    <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                                    <li>Developer</li>
                                     <li><em>"The best error message is the one that never shows up."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://api.adorable.io/avatars/283/3"
-                                    alt="about Bao">
+                                <img src="https://api.adorable.io/avatars/283/3" alt="about Bao">
                                 <h2>Hai Bao Tran</h2>
                                 <ul>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i
-                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i
-                                                class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Anybody can write code that a computer can understand. Good programmers write code that humans can understand."</em></li>
+                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                    <li>Scrum Master</li>
+                                    <li><em>"Anybody can write code that a computer can understand. Good programmers
+                                            write code that humans can understand."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://api.adorable.io/avatars/283/2"
-                                    alt="about Ji">
+                                <img src="https://api.adorable.io/avatars/283/2" alt="about Ji">
                                 <h2>Ji Kim</h2>
                                 <ul>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i
-                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i
-                                                class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live."</em></li>
+                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                    <li>Product Owner</li>
+                                    <li><em>"Always code as if the guy who ends up maintaining your code will be a
+                                            violent psychopath who knows where you live."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://api.adorable.io/avatars/283/10"
-                                    alt="about Minh">
+                                <img src="https://api.adorable.io/avatars/283/10" alt="about Minh">
                                 <h2>Minh Nguyen</h2>
                                 <ul>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i
-                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i
-                                                class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Give a man a program, frustrate him for a day. Teach a man to program, frustrate him for a lifetime."</em></li>
+                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                    <li>Developer</li>
+                                    <li><em>"Give a man a program, frustrate him for a day. Teach a man to program,
+                                            frustrate him for a lifetime."</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
-                                <img src="https://api.adorable.io/avatars/286/29"
-                                    alt="about Mit">
+                                <img src="https://api.adorable.io/avatars/286/29" alt="about Mit">
                                 <h2>Mit Ti</h2>
                                 <ul>
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="#"><i
-                                                class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
-                                    <li><a href="#"><i
-                                                class="fab fa-youtube"></i></a></li>
-                                    <li><em>"Programming isn't about what you know; it's about what you can figure out."</em></li>
+                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                    <li>Developer</li>
+                                    <li><em>"Programming isn't about what you know; it's about what you can figure
+                                            out."</em></li>
                                 </ul>
                             </div>
                         </div>
